some styling and basic routing

--- a/src/app/shared/components/button/button.component.html
+++ b/src/app/shared/components/button/button.component.html
@@ -1,4 +1,4 @@
-<div class="app-button">
+<div class="app-button" (click)="onClick()">
   {{ text }}
   <fa-icon *ngIf="icon" [icon]="icon" />
 </div>
