--- a/src/app/shared/components/search/search.component.html
+++ b/src/app/shared/components/search/search.component.html
@@ -1,4 +1,4 @@
 <div class="app-search">
-  <input type="text" placeholder="Input text">
-  <app-button></app-button>
+  <input class="form-control" type="text" placeholder="Input text" />
+  <app-button text="SEARCH"></app-button>
 </div>
