--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-header></app-header>
+<app-header>
+  <app-button text="Login" (buttonClick)="onLoginButtonClick()"></app-button>
+</app-header>
 <router-outlet></router-outlet>
