--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,4 +1,4 @@
 <div class="app-header">
-  <img alt="logo" src="assets/logo.svg" />
+  <img class="logo" routerLink="/" alt="logo" src="assets/logo.svg" />
   <ng-content></ng-content>
 </div>
