--- a/src/app/shared/components/login-form/login-form.component.html
+++ b/src/app/shared/components/login-form/login-form.component.html
@@ -1,27 +1,44 @@
-<h2 class="text-align-center">Login</h2>
-<div class="app-plate">
-  <form #loginForm="ngForm">
+<h2 class="text-align-center my-3">Login</h2>
+<div class="app-plate w-75 mx-auto">
+  <form #loginForm="ngForm" class="form-group">
     <div class="login-form">
       <div>
         <div class="form__control">
           <label for="email">Email</label>
           <!--Use the name `email` for the form control.-->
-          <input type="text" id="email" placeholder="Input text"/>
-          <span id="emailErrorMessage" class="text-danger">Email is required.</span>
+          <input
+            type="text"
+            id="email"
+            placeholder="Input text"
+            class="form-control"
+          />
+          <span id="emailErrorMessage" class="text-danger"
+            >Email is required.</span
+          >
         </div>
         <div class="form__control">
           <label for="password">Password</label>
           <!--Use the name `password` for the form control.-->
-          <input type="password" id="password" placeholder="Input text"/>
-          <span id="passwordErrorMessage" class="text-danger">Password is required.</span>
+          <input
+            type="password"
+            id="password"
+            placeholder="Input text"
+            class="form-control"
+          />
+          <span id="passwordErrorMessage" class="text-danger"
+            >Password is required.</span
+          >
         </div>
       </div>
       <div>
-        <div class="form__action">
-          <app-button></app-button>
+        <div class="form__action d-flex justify-content-center">
+          <app-button [text]="'LOGIN'"></app-button>
         </div>
         <div class="form__text">
-          If you don't have an account you may <strong>Registration</strong>
+          If you don't have an account you may
+          <strong class="form__text__registration" routerLink="/registration"
+            >Registration</strong
+          >
         </div>
       </div>
     </div>
