--- a/src/app/shared/components/login-form/login-form.component.scss
+++ b/src/app/shared/components/login-form/login-form.component.scss
@@ -1,4 +1,4 @@
-@import 'src/app/shared/styles/styles.scss';
+@import "src/app/shared/styles/styles.scss";
 
 .login-form {
   width: 260px;
@@ -6,4 +6,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
+  .form__text__registration {
+    cursor: pointer;
+  }
 }
