Login and register forms

--- a/src/app/shared/components/button/button.component.scss
+++ b/src/app/shared/components/button/button.component.scss
@@ -5,6 +5,7 @@
   align-items: center;
   padding: 13px 36px;
   gap: 10px;
+  border: none;
   background: #007298;
   border-radius: 4px;
   color: #fff;
@@ -22,6 +23,11 @@
 
   &:active {
     background: #016486;
+  }
+
+  &:disabled {
+    background: #b5b5b5;
+    cursor: not-allowed;
   }
 
   &__single-icon {
