--- a/src/app/shared/components/button/button.component.html
+++ b/src/app/shared/components/button/button.component.html
@@ -1,4 +1,9 @@
-<div class="app-button" (click)="onClick()">
+<button
+  [disabled]="disabled"
+  class="app-button"
+  type="submit"
+  (click)="onClick()"
+>
   {{ text }}
   <fa-icon *ngIf="icon" [icon]="icon" />
-</div>
+</button>
