--- a/src/app/features/courses/courses.component.html
+++ b/src/app/features/courses/courses.component.html
@@ -3,7 +3,7 @@
 <app-course-list
   *ngIf="courses.length > 0"
   [courses]="courses"
-  [editable]="true"
+  [editable]="editable"
 ></app-course-list>
 
 <app-info
