--- a/src/app/features/courses/courses.component.html
+++ b/src/app/features/courses/courses.component.html
@@ -17,13 +17,13 @@
 </div>
 
 <app-course-list
-  *ngIf="courses.length > 0"
-  [courses]="courses"
+  *ngIf="(allCourses$ | async)?.length! > 0"
+  [courses]="(allCourses$ | async)!"
   [editable]="editable"
 ></app-course-list>
 
 <app-info
-  *ngIf="courses.length === 0"
+  *ngIf="(allCourses$ | async)?.length === 0"
   title="Your List Is Empty"
   text="Please use 'Add New Course' button to add your first course."
 >
